--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,2 +1,6 @@
 <h1><%= @user["login"] %> (<%= @user["id"] %>) is on Github</h1>
 <%= image_tag @user["avatar_url"] %>
+
+<% @repos.each do |repo_name| %>
+<li><%= repo_name %></li>
+<% end %>
